<resources>
    <string name="app_name">Call Prank</string>
    <string name="app_setting">Setting</string>
    <string name="app_theme">Call Theme</string>
    <string name="app_about">About</string>
    <string name="call_start">Start</string>
    <string name="call_man">Name</string>
    <string name="call_number">Number</string>
    <string name="call_time">Time</string>
    <string name="call_time_set">Make a call after</string>
    <string name="call_voice_set">voice</string>
    <string name="call_repeate_set">Repeat</string>
    <string name="call_voice">Voice</string>
    <string name="call_ring">Ringtone</string>
    <string name="call_mode">Repeat</string>
    <string name="call_time_type">3s after call</string>
    <string name="call_volice_type">null</string>
    <string name="call_ring_type">fllow system</string>
    <string name="call_mode_type">none</string>
    <string name="call_mode_10">interval 10s and 3 repetition</string>
    <string name="call_mode_30">interval 30s and 3 repetition</string>
    <string name="call_mode_60">interval 60s and 3 repetition</string>
    <string name="pic_photo">Contacts</string>
    <string name="pic_camera">Camera</string>
    <string name="pic_system">Gallery</string>
    <string name="voice_photo">System File</string>
    <string name="active">Active</string>
    <string name="Privacy">Privacy policy</string>
    <string name="Version">App version :</string>
    <string name="Rate">Rate me</string>
    <string name="Share">Share me</string>
    <string name="FeedBack">Feedback</string>
    <string name="About">About</string>
    <string name="More">Updating...</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="missed_call">Missed Call</string>
    <string name="text_permission">plese to system setting open camera and storage permission</string>
    <string name="text_permission_contacts">plese to system setting open contacts permission</string>
    <string name="text_permission_call_log">plese to system setting open cell log permission</string>
    <string name="text_select_theme">Selected</string>
    <string name="number_null">Number can\'t be empty!</string>
    <string name="call_ready">Fake call scheduled!</string>
    <string name="theme_android">Android</string>
    <string name="theme_mi">MIUI</string>
    <string name="theme_samsung">Samsung</string>
    <string name="theme_blur">Blur</string>
    <string name="theme_lg2">LG</string>
    <string name="theme_try">Try</string>
    <string name="theme_mi_jy">Mute</string>
    <string name="theme_mi_zanting">Suspend</string>
    <string name="theme_mi_bianqian">Note</string>
    <string name="theme_mi_tongxunlu">Contacts</string>
    <string name="theme_mi_tianjia">Add Call</string>
    <string name="theme_mi_luyin">Record</string>
    <string name="theme_senight_sms">SMS</string>
    <string name="theme_mi_mianti">Hands-free</string>
    <string name="theme_mi_jianpan">Keyboard</string>

    <string name="thinks">Thanks to the 5 stars</string>
    <string name="call_theme">Theme</string>
</resources>
