<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_h"
        android:background="@color/colorMain">


        <ImageView
            android:id="@+id/iv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/call_repeate_set"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/app_title_text" />


    </FrameLayout>

    <RadioGroup
        android:id="@+id/rp_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_3"

            android:layout_width="match_parent"
            android:layout_height="@dimen/tip_item_h"
            android:button="@null"
            android:gravity="center"
            android:text="@string/call_mode_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLine" />

        <RadioButton
            android:id="@+id/rb_30"

            android:layout_width="match_parent"
            android:layout_height="@dimen/tip_item_h"
            android:button="@null"
            android:gravity="center"
            android:text="@string/call_mode_10" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLine" />

        <RadioButton
            android:id="@+id/rb_60"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tip_item_h"

            android:button="@null"
            android:gravity="center"
            android:text="@string/call_mode_30" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLine" />

        <RadioButton
            android:id="@+id/rb_120"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tip_item_h"
            android:button="@null"
            android:gravity="center"

            android:text="@string/call_mode_60" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_active"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorMain"
        android:gravity="center"
        android:text="@string/active"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">


        </FrameLayout>
    </FrameLayout>


</LinearLayout>
