<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_homepic_tip"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_picphoto"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_margin="@dimen/tip_margin"
            android:text="@string/pic_photo"
            android:textColor="@color/color333"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_margin="@dimen/tip_margin"
            android:src="@mipmap/icon_pic_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLine" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_camera"

        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_margin="@dimen/tip_margin"
            android:text="@string/pic_camera"
            android:textColor="@color/color333"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_margin="@dimen/tip_margin"
            android:src="@mipmap/icon_pic_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorLine" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_systemphoto"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_margin="@dimen/tip_margin"
            android:text="@string/pic_system"
            android:textColor="@color/color333"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_margin="@dimen/tip_margin"
            android:src="@mipmap/icon_pic_arrow" />

    </FrameLayout>

</LinearLayout>
